Agregada funcionalidad tickets con javascript

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <a class="nav-link text-white-50" href="#formulario">Conviertete en orador</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-white-50" href="#">Comprar tickets</a>
+                            <a class="nav-link text-white-50" href="./tickets.html">Comprar tickets</a>
                         </li>
                     </ul>
                 </div>
@@ -54,7 +54,7 @@
                             <p>Bs llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que estan creando el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
                             <div>
                                 <a class="btn  border border-white bg-transparent text-white" href="#">Quiero ser orador</a>
-                                <a href="#" class="btn bg-success text-white">Comprar tickets</a>
+                                <a href="./tickets.html" class="btn bg-success text-white">Comprar tickets</a>
                             </div>
                         </div>
                         </div>
@@ -67,7 +67,7 @@
                             <p>Bs llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que estan creando el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
                             <div>
                                 <a class="btn  border border-white bg-transparent text-white" href="#">Quiero ser orador</a>
-                                <a href="#" class="btn bg-success text-white">Comprar tickets</a>
+                                <a href="./tickets.html" class="btn bg-success text-white">Comprar tickets</a>
                             </div>
                         </div>
                     </div>
@@ -80,7 +80,7 @@
                             <p>Bs llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que estan creando el futuro de internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
                             <div>
                                 <a class="btn  border border-white bg-transparent text-white" href="#">Quiero ser orador</a>
-                                <a href="#" class="btn bg-success text-white">Comprar tickets</a>
+                                <a href="./tickets.html" class="btn bg-success text-white">Comprar tickets</a>
                             </div>
                         </div>
                     </div>
@@ -136,8 +136,7 @@
             <!--Ubicacion-->
             <section class="container-fluid pt-3 mt-3 mb-3" id="ubicacion">
                 <div class="d-flex" id="container-ubicacion">
-                    <div class="w-100 border border-white">
-                        <img src="./assets/honolulu.jpg" alt="" width="100%">
+                    <div class="w-100 border border-white bg-ubicacion">
                     </div>
                     <div class="bg-dark w-100 text-white p-3 border border-white">
                         <h3>Bs As - Octubre</h3>
@@ -160,10 +159,10 @@
                     </div>
                     <form class="row g-3 needs-validation p-2 " novalidate>
                       <div class="col-sm-6">
-                        <input type="text" class="form-control" id="validationCustom01" value="Nombre" required>
+                        <input type="text" class="form-control" id="validationCustom01" placeholder="Nombre" required>
                       </div>
                       <div class="col-sm-6">
-                        <input type="text" class="form-control" id="Apellido" value="Apellido" required>
+                        <input type="text" class="form-control" id="Apellido" placeholder="Apellido" required>
                       </div>
                       <div class="col-mb-3 pt-3">
                         <textarea class="form-control" id="Mensaje" rows="3">Sobre que quieres hablar?</textarea>
